--- a/src/css/nerd-mode.css
+++ b/src/css/nerd-mode.css
@@ -19,7 +19,8 @@
 	background: rgba(255, 255, 234, 1);
 }
 
-::-moz-selection { /* Code for Firefox */
+/* Code for Firefox */
+::-moz-selection {
 	background: rgba(238, 238, 158, 1);
 }
   
@@ -27,33 +28,19 @@
 	background: rgba(238, 238, 158, 1);
 }
 
-/* TODO: add better class and id names */
 html {
-	cursor: url('../media/cursor3.png'), auto;
 	border: 4px solid rgba(85, 170, 170, 1);
+	cursor: url('../../media/cursor3.png'), auto;
 }
 
 body {
 	min-height: 100vh;
-	/* font-family: 'Common Pixel', sans-serif; */
 	font-family: 'VT323', monospace;
 	font-size: 25px;
 	background-color: rgba(253, 255, 234, 1);    
 	margin: 0;
 	padding: 0;
-	/* overflow: hidden; */
 }
-
-/* a {
-	color: black;
-	cursor: url('./media/cursor3.png'), auto;
-	text-decoration: none;
-}
-
-a:hover {
-	background-color: rgba(0, 105, 0, 1);
-	color: rgba(253, 255, 234, 1);
-} */
 
 .heading {
 	background-color: rgba(234, 255, 255, 1);
@@ -81,10 +68,6 @@ a:hover {
 	padding-left: 5px;
 }
 
-/* .content {
-	padding-left: 25px;
-} */
-
 .term {
     position: absolute;
     top: 50%;
@@ -94,11 +77,11 @@ a:hover {
 
 #term__term {
     border: 3px solid rgba(87, 168, 168, 1);
+	cursor: url('../../media/cursor3.png'), auto;
 	font-family: 'VT323', monospace;
 	font-size: 20px;
     padding-left: 10px;
 	text-decoration: none;
-	cursor: url('../media/cursor3.png'), auto;
     resize: none;
 }
 
