--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-@import url('http://fonts.cdnfonts.com/css/common-pixel');
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 ::-webkit-scrollbar {
@@ -19,17 +18,15 @@
 	background: rgba(255, 255, 234, 1);
 }
 
-/* Code for Firefox */
-::-moz-selection {
-	background: rgba(238, 238, 158, 1);
-}
-  
 ::selection {
 	background: rgba(238, 238, 158, 1);
 }
 
+::-moz-selection {
+	background: rgba(238, 238, 158, 1);
+}
+
 html {
-	/* .cru??? */
 	cursor: url('./media/cursor3.png'), auto;
 	border: 4px solid rgba(85, 170, 170, 1);
 }
@@ -37,7 +34,8 @@ html {
 body {
 	min-height: 100vh;
 	font-family: 'VT323', monospace;
-	font-size: 25px;
+	font-size: 30px;
+	/* font-size: 25px; */
 	background-color: rgba(253, 255, 234, 1);    
 	margin: 0;
 	padding: 0;
@@ -65,6 +63,10 @@ a:hover {
 	display: inline;
 }
 
+#heading__name {
+	padding-left: 5px;
+}
+
 #heading__box {
 	background-color: rgba(136, 136, 204, 1);
 	border: solid rgba(0, 0, 0, 1);
@@ -74,10 +76,6 @@ a:hover {
 
 #heading__box:hover {
 	background-color: rgba(136, 136, 204, 0.7);
-}
-
-#heading__name {
-	padding-left: 5px;
 }
 
 .content {
