--- a/css/index.css
+++ b/css/index.css
@@ -27,24 +27,25 @@
 }
 
 html {
-	cursor: url('./media/cursor3.png'), auto;
-	border: 4px solid rgba(85, 170, 170, 1);
+	cursor: url('../media/cursor3.png'), auto;
+	border: 4px solid rgba(159, 239, 239, 1);
 }
 
-body {
+html, body {
 	min-height: 100vh;
+	max-width: 100vw;
 	font-family: 'VT323', monospace;
 	font-size: 30px;
-	/* font-size: 25px; */
 	background-color: rgba(253, 255, 234, 1);    
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 a {
 	color: black;
 	text-decoration: none;
-	cursor: url('./media/cursor3.png'), auto;
+	cursor: url('../media/cursor3.png'), auto;
 }
 
 a:hover {
@@ -57,6 +58,11 @@ a:hover {
 	border-top: solid rgba(0, 0, 0, 1);
 	border-bottom: solid rgba(0, 0, 0, 1);
 	border-right: solid rgba(0, 0, 0, 1);
+}
+
+.heading::selection, #heading__name::selection, #heading__box::selection {
+	color: rgba(0, 0, 0, 1);
+	background-color: rgba(159, 239, 239, 1);
 }
 
 #heading__name, #heading__box {
@@ -80,4 +86,28 @@ a:hover {
 
 .content {
 	padding-left: 25px;
+}
+
+#term__text-area {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-15%, -30%);
+	cursor: url('../media/cursor3.png'), auto;
+	border: 4px solid rgba(85, 170, 170, 1);
+	font-family: 'VT323', monospace;
+	font-size: 23px;
+	text-decoration: none;
+	max-width: 100%; 
+    max-height: 100%;
+	overflow: hidden;
+}
+
+#term__text-area:focus {
+    outline: none;
+}
+
+#term__text-area::selection {
+	color: rgba(255, 255, 255, 1);
+    background-color: rgba(0, 105, 0, 1);
 }
