--- a/css/index.css
+++ b/css/index.css
@@ -80,26 +80,18 @@ a:hover {
 	padding-right: 10px;
 }
 
-#heading__box:hover {
-	background-color: rgba(136, 136, 204, 0.7);
-}
-
 .content {
 	padding-left: 25px;
 }
 
 #term__text-area {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-25%, -35%);
 	cursor: url('../media/cursor3.png'), auto;
 	border: 4px solid rgba(85, 170, 170, 1);
 	font-family: 'VT323', monospace;
 	font-size: 23px;
 	text-decoration: none;
-	max-width: 100%; 
-    max-height: 100%;
+	width: auto;
 	overflow: hidden;
 	visibility: hidden;
 }
@@ -111,4 +103,20 @@ a:hover {
 #term__text-area::selection {
 	color: rgba(255, 255, 255, 1);
     background-color: rgba(0, 105, 0, 1);
+}
+
+.custom-cm {
+	background-color: rgba(237, 254, 235, 1);
+	border: solid rgba(140, 195, 135, 1);
+	font-size: 23px;
+	max-width: fit-content;
+	position: absolute;
+	top: 0;
+	left: 0;
+	visibility: hidden;
+}
+
+.custom-cm__item:hover {
+	color: rgba(237, 254, 235, 1);
+	background-color: rgba(73, 135, 70, 1);
 }
