--- a/css/index.css
+++ b/css/index.css
@@ -5,118 +5,95 @@
 }
   
 ::-webkit-scrollbar-track {
-	background: rgba(153, 153, 76, 1);
-	border: 2px solid black;	
+	background-color: rgba(153, 153, 76, 1);
+	border: 2px solid rgba(0, 0, 0, 1);	
 }
   
 ::-webkit-scrollbar-thumb {
-	background: rgba(255, 255, 234, 1);
-	border: 2px solid black;
+	background-color: rgba(255, 255, 234, 1);
+	border: 2px solid rgba(0, 0, 0, 1);
 }
   
 ::-webkit-scrollbar-thumb:hover {
-	background: rgba(255, 255, 234, 1);
+	background-color: rgba(255, 255, 234, 1);
 }
 
 ::selection {
-	background: rgba(238, 238, 158, 1);
+	background-color: rgba(238, 238, 158, 1);
 }
 
 ::-moz-selection {
-	background: rgba(238, 238, 158, 1);
+	background-color: rgba(238, 238, 158, 1);
 }
 
-html {
+body {
+	/* border: 4px double red; */
+	background-color: rgba(118, 118, 118, 1);
 	cursor: url('../media/cursor3.png'), auto;
-	border: 4px solid rgba(159, 239, 239, 1);
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    max-width: 100vw;
+    /* overflow: hidden; */
+    display: flex;
 }
 
-html, body {
-	min-height: 100vh;
-	max-width: 100vw;
-	font-family: 'VT323', monospace;
-	font-size: 30px;
-	background-color: rgba(253, 255, 234, 1);    
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+.acme-container {
+	background-color: rgba(255, 255, 234, 1);
+    border: 4px solid rgba(85, 170, 170, 1);
+    font-family: 'VT323', monospace;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
-a {
-	color: black;
-	text-decoration: none;
-	cursor: url('../media/cursor3.png'), auto;
+.acme-titlebar {
+    background-color: rgba(234, 255, 255, 1);
+    border: solid rgba(0, 0, 0, 1);
 }
 
-a:hover {
-	background-color: rgba(0, 105, 0, 1);
-	color: rgba(253, 255, 234, 1);
+.acme-titlebar__title {
+    background-color: rgba(234, 255, 255, 1);
+    font-family: 'VT323', monospace;
+    font-size: 40px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    padding-left: 1%;
+    left: 0; 
+    top: 0; 
+    width: 100%; 
+    height: 100%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
 }
 
-.heading {
-	background-color: rgba(234, 255, 255, 1);
-	border-top: solid rgba(0, 0, 0, 1);
-	border-bottom: solid rgba(0, 0, 0, 1);
-	border-right: solid rgba(0, 0, 0, 1);
-}
-
-.heading::selection, #heading__name::selection, #heading__box::selection {
-	color: rgba(0, 0, 0, 1);
-	background-color: rgba(159, 239, 239, 1);
-}
-
-#heading__name, #heading__box {
-	display: inline;
-}
-
-#heading__name {
-	padding-left: 5px;
-}
-
-#heading__box {
-	background-color: rgba(136, 136, 204, 1);
-	border: solid rgba(0, 0, 0, 1);
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.content {
-	padding-left: 25px;
-}
-
-#term__text-area {
-	position: absolute;
-	cursor: url('../media/cursor3.png'), auto;
-	border: 4px solid rgba(85, 170, 170, 1);
-	font-family: 'VT323', monospace;
-	font-size: 23px;
-	text-decoration: none;
-	width: auto;
-	overflow: hidden;
-	visibility: hidden;
-}
-
-#term__text-area:focus {
+.acme-titlebar__title:focus {
     outline: none;
 }
 
-#term__text-area::selection {
-	color: rgba(255, 255, 255, 1);
-    background-color: rgba(0, 105, 0, 1);
+.acme-menubar {
+    background-color: rgba(234, 255, 255, 1);
+    border: solid rgba(0, 0, 0, 1);
 }
 
-.custom-cm {
-	background-color: rgba(237, 254, 235, 1);
-	border: solid rgba(140, 195, 135, 1);
-	font-size: 23px;
-	max-width: fit-content;
-	position: absolute;
-	top: 0;
-	left: 0;
-	visibility: hidden;
+.acme-menubar__menu {
+    background-color: rgba(234, 255, 255, 1);
+    font-family: 'VT323', monospace;
+    font-size: 30px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    padding-left: 1%;
+    left: 0; 
+    top: 0; 
+    width: 100%; 
+    height: 100%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
 }
 
-.custom-cm__item:hover {
-	color: rgba(237, 254, 235, 1);
-	background-color: rgba(73, 135, 70, 1);
+.acme-menubar__menu:focus {
+    outline: none;
 }
