--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,16 @@
 	border: 2px solid rgba(0, 0, 0, 1);
 }
   
-::-webkit-scrollbar-thumb:hover {
-	background-color: rgba(255, 255, 234, 1);
+::-webkit-scrollbar-thumb:active {
+	background-color: rgba(255, 255, 234, 0.7);
+}
+
+::selection {
+	background-color: rgba(238, 238, 158, 1);
+}
+
+::-moz-selection {
+	background-color: rgba(238, 238, 158, 1);
 }
 
 body {
@@ -96,14 +104,6 @@ body {
     font-size: 30px;
 }
 
-.acme-editor__text-area::selection {
-	background-color: rgba(238, 238, 158, 1);
-}
-
-.acme-editor__text-area::-moz-selection {
-	background-color: rgba(238, 238, 158, 1);
-}
-
 .custom-cm {
 	background-color: rgba(237, 254, 235, 1);
 	border: solid rgba(140, 195, 135, 1);
@@ -120,4 +120,45 @@ body {
 .custom-cm__item:hover {
 	color: rgba(237, 254, 235, 1);
 	background-color: rgba(73, 135, 70, 1);
+}
+
+.custom-alert {
+    background-color: rgba(237, 254, 235, 1);
+	border: solid rgba(140, 195, 135, 1);
+	font-size: 25px;
+    cursor: inherit;
+    font-family: inherit;
+	max-width: fit-content;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+	visibility: hidden;
+}
+
+.custom-alert__message {
+    margin: auto;
+}
+
+.custom-alert__button-container {
+    margin: auto;
+    padding-top: 3%;
+}
+
+.custom-alert__button {
+    background-color: rgba(136, 136, 204, 1);
+	font-size: 25px;
+    cursor: inherit;
+    font-family: inherit;
+}
+
+.custom-alert__button:hover {
+    background-color: rgba(136, 136, 204, 0.7);
+}
+
+.custom-alert__button:active {
+    background-color: rgba(136, 136, 204, 1);
 }
