--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,8 @@
 body {
     background-color: rgba(238,238,238, 1);
     padding: 2%;
-    overflow-y: scroll;    
+    overflow-y: scroll;   
+    cursor: default; 
 } 
 
 a {
@@ -30,6 +31,10 @@ details > summary {
 
 details[open] > summary {
     list-style-type: '- ';
+}
+
+summary {
+    cursor: pointer;
 }
 
 #cowsay {
