--- a/css/index.css
+++ b/css/index.css
@@ -1,51 +1,51 @@
 ::-webkit-scrollbar {
 	width:auto;
 }
-  
+
 ::-webkit-scrollbar-track {
-	background-color: rgba(238,238,238, 1);
+	background-color: rgba(238, 238, 238, 1);
 }
-  
+
 ::-webkit-scrollbar-thumb:active {
 	background-color: rgba(168, 168, 168, 1);
 }
 
 body {
-    background-color: rgba(238,238,238, 1);
-    padding: 2%;
-    overflow-y: scroll;   
-    cursor: default; 
-} 
+	background-color: rgba(238 ,238, 238, 1);
+	padding: 2%;
+	overflow-y: scroll;
+	cursor: default;
+}
 
 a {
-    text-decoration: underline dotted;
+	text-decoration: underline dotted;
 }
 
 ul {
-    list-style-type: '> ';
+	list-style-type: '> ';
 }
 
 details > summary {
-    list-style-type: '+ ';
+	list-style-type: '+ ';
 }
 
 details[open] > summary {
-    list-style-type: '- ';
+	list-style-type: '- ';
 }
 
 summary {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 #cowsay {
-    font-size: 170%;
+	font-size: 170%;
 }
 
 #old-site-link {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 #info {
-    font-size: 140%;
-    font-family: monospace;
+	font-size: 140%;
+	font-family: monospace;
 }
