--- a/index.css
+++ b/index.css
@@ -1,70 +1,58 @@
-::-webkit-scrollbar {
-	width: auto;
+/* roboto mono */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700');
+
+/* nord */
+:root {
+    --nord0: #2e3440;
+    --nord1: #3b4252;
+    --nord2: #434c5e;
+    --nord3: #4c566a;
+    --nord4: #d8dee9;
+    --nord5: #e5e9f0;
+    --nord6: #eceff4;
+    --nord7: #8fbcbb;
+    --nord8: #88c0d0;
+    --nord9: #81a1c1;
+    --nord10: #5e81ac;
+    --nord11: #bf616a;
+    --nord12: #d08770;
+    --nord13: #ebcb8b;
+    --nord14: #a3be8c;
+    --nord15: #b48ead;
 }
 
-::-webkit-scrollbar-track {
-	background-color: white;
-}
-
-::-webkit-scrollbar-thumb:active {
-	background-color: blue;
-	border: solid black;
+::-moz-selection {
+    color: var(--nord0);
+    background: var(--nord7);
 }
 
 ::selection {
-	color: white;
-	background: blue;
+    color: var(--nord0);
+    background: var(--nord7);
 }
 
 body {
-	background-color: white;
-	padding: 1%;
-	overflow-y: scroll;
-	font-family: monospace;
-	cursor: default;
+    font-family: "Roboto Mono", monospace;
+    -webkit-font-smoothing: antialiased;
+    background: var(--nord6);
+    color: var(--nord0);
+    cursor: default;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 a {
-	text-decoration: none;
-	color: blue;
-	cursor: default;
+    color: var(--nord1);
 }
 
 a:hover {
-	color: white;
-	background-color: blue;
+	color: var(--nord0);
+	background-color: var(--nord7);
 }
 
-ul {
-	list-style: '- ';
-}
-
-details>summary {
-	list-style: ':';
-}
-
-details[open]>summary {
-	list-style: '.';
-}
-
-
-summary {
-	font-size: 125%;
-}
 
 #name {
-	font-size: 400%;
-}
-
-#links {
-	font-size: 100%;
-	padding-left: 8px;
-}
-
-#info {
-	font-size: 130%;
-}
-
-.work_in_progress {
-	cursor: not-allowed;
+    padding-bottom: 1em;
 }
